--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SQLALCHEMY_DATABASE_URI='postgresql+psycopg2://dk:denno@localhost/pitch'
+SQLALCHEMY_DATABASE_URI='postgresql+psycopg2://dk:charles@localhost/pitchapp'
 SECRET_KEY='dennis'
 MAIL_USERNAME='dennismwaniki67@gmail.com'
 MAIL_PASSWORD='mwaniki91'
