--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 SQLALCHEMY_DATABASE_URI='postgresql+psycopg2://dk:charles@localhost/pitchapp'
-SECRET_KEY='dennis'
+SECRET_KEY='charles'
 MAIL_USERNAME='dennismwaniki67@gmail.com'
 MAIL_PASSWORD='mwaniki91'
 DEBUG=FALSE
